fixed code formatting for easier readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,10 @@ html    {
 }
 
 body  {
+    background-image: url("/assets/images/interlaced.png");
     background-color: lightgrey;
     height: 100%;
+    width:  100%;
     margin: 0;
     padding: 0;
     position: relative;
